--- a/assets/css/profile_style.css
+++ b/assets/css/profile_style.css
@@ -113,7 +113,7 @@
      margin-bottom: 25px;
 }
  .social-icon:hover {
-     transform: rotate(360deg)scale(1.3);
+     //transform: rotate(360deg)scale(1.3);
 }
 /* Facebook Button Styling */
  .facebook {
@@ -155,27 +155,25 @@
 }
 /* Linkedin Button Styling */
  .linkedin {
-     font-size: 24px;
-     padding-top: 8px;
-     padding-left: 1px;
+     font-size: 22px;
+     padding-top: 9px;
+     border-color: #55acee;
      background-color: #55acee;
      color: #ffffff;
-     border-color: #55acee;
 }
- .linkedin :hover {
+ .linkedin:hover {
      background-color: #ffffff;
      color: #55acee;
 }
 /* Instagram Button Styling */
  .instagram {
-     font-size: 24px;
-     padding-top: 8px;
-     padding-left: 1px;
+     font-size: 22px;
+     padding-top: 9px;
+     border-color: #af0606;
      background-color: #af0606;
      color: #ffffff;
-     border-color: #af0606;
 }
- .instagram :hover {
+ .instagram:hover {
      background-color: #ffffff;
      color: #af0606;
 }
