--- a/assets/css/profile_style.css
+++ b/assets/css/profile_style.css
@@ -53,6 +53,10 @@
     transition: ease-in-out 0.3s;
 }
 
+.center_align{
+	    text-align: center;
+    display: block;
+}
  .name_style{
      line-height: 45px;
      font-size: 35px;
