--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -80,6 +80,37 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
+
+
+
+.buy-now {
+  margin-right: -28px;
+  position: fixed;
+  display: none;
+  right: 15px;
+  bottom: 50%;
+  z-index: 99999;
+}
+
+.buy-now i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  width: 131px;
+  //height: 40px;
+  border-radius: 50px;
+  background: #191c93;
+  color: #fff;
+  transition: all 0.4s;
+}
+
+.buy-now i:hover {
+  background: #2be4a2;
+  color: #fff;
+}
+
+
 .back-to-top {
   position: fixed;
   display: none;
@@ -707,7 +738,7 @@ section {
 }
 
 .about .video-box {
-  background: url("../img/about.png") center center no-repeat;
+  background: url("../img/about.jpg") center center no-repeat;
   background-size: contain;
   min-height: 300px;
 }
