added customer dhinakaran atlas systems vizhupuram

--- a/static/assets/css/login_style.css
+++ b/static/assets/css/login_style.css
@@ -8,11 +8,53 @@ background: #007bff;
 background: linear-gradient(to right, #0062E6, #33AEFF);
 }
 
+.invalid_cred {
+	display:none;
+	color: red;
+    font-weight: 500;
+}
 .card-signin {
 border: 0;
 border-radius: 1rem;
 box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
 }
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fdd;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fdd transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 
 .card-signin .card-title {
 	font-family: 'Roboto', sans-serif;
@@ -143,7 +185,7 @@ color: #777;
 }
 
 .form-signin div label.error {
-	margin-top: 50px;
+	margin-top: 44px;
     margin-left: 15px;
     margin-bottom: 52px;
     padding-left: 0;
@@ -158,3 +200,4 @@ color: #777;
 
 
 }
+
