--- a/static/assets/css/form_style.css
+++ b/static/assets/css/form_style.css
@@ -8,7 +8,16 @@ body {
 	justify-content: center;
 	align-items: center;
 }
-
+.duplicateEmail
+{
+	display:none;
+	color:red !important;
+}
+.serverError
+{
+	display:none;
+	color:red !important;
+}
 .page-content {
 	width: 100%;
 	margin: 0 auto;
