--- a/static/assets/css/form_style.css
+++ b/static/assets/css/form_style.css
@@ -121,10 +121,11 @@ body {
 }
 
 .form-v2-content .form-detail label {
+	line-height: 1.5;
+    color: #495057;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 	font-size: 16px;
-	color: #666;
 	display: block;
 	margin-bottom: 11px;
 }
@@ -197,10 +198,10 @@ body {
 }
 
 .form-v2-content .form-detail input {
+	border: 1px solid #ced4da;
+    border-radius: 2rem !important;
 	width: 91%;
 	padding: 14.5px 15px;
-	border: 1px solid #e5e5e5;
-	border-radius: 5px;
 	-o-border-radius: 5px;
 	-ms-border-radius: 5px;
 	-moz-border-radius: 5px;
