--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -8,9 +8,20 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+* {
+    box-sizing: border-box;
+}
+html {
+    width: 100%;
+    min-height: 100%;
+}
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #444444;
+    width: inherit;
+    min-height: inherit;
+    margin: 0;
+    padding: 0;
+	font-family: "Open Sans", sans-serif;
+	color: #444444;
 }
 
 .disable_a{
