--- a/invitation/demo/assets/css/style.css
+++ b/invitation/demo/assets/css/style.css
@@ -9,6 +9,16 @@
     background-size: 100%;	
 }
 
+.sec_top{
+	margin-top:70px;
+}
+@media screen and (max-width: 768px) {
+  .card{
+    max-width:100%;
+	height: 2160px;
+  }
+}
+
 .title {
   color: grey;
   font-size: 18px;
@@ -36,6 +46,9 @@ a {
   color: black;
 }
 
+body {
+	margin: 0px !important;
+}
 button:hover, a:hover {
   opacity: 0.7;
 }
