--- a/invitation/demo/assets/css/style.css
+++ b/invitation/demo/assets/css/style.css
@@ -5,17 +5,26 @@
     text-align: center;
     font-family: arial;
     background-image: url(/invitation/demo/assets/images/black_background.jpg);
-    height: 1600px;
+    height: 2150px;
     background-size: 100%;	
 }
 
 .sec_top{
-	margin-top:70px;
+	margin-top:40px;
 }
+
+.sec_heading{
+	font-family: 'Courgette', cursive;font-size: 50px; color: #d6973e; margin:0px;
+}
+
+.sec_content{
+	font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;
+}
+
 @media screen and (max-width: 768px) {
   .card{
     max-width:100%;
-	height: 2160px;
+	height: 2150px;
   }
 }
 
