--- a/invitation/demo/assets/css/style.css
+++ b/invitation/demo/assets/css/style.css
@@ -6,8 +6,7 @@
     font-family: arial;
     background-image: url(/invitation/demo/assets/images/black_background.jpg);
 	background-repeat:no-repeat;
-    height: 2150px;
-    background-size: 100%;	
+	background-size: 100% 100%;
 }
 
 .sec_top{
@@ -25,8 +24,7 @@
 @media screen and (max-width: 768px) {
   .card{
     max-width:100%;
-	height: 2150px;
-  }
+	}
 }
 
 .title {
