--- a/invitation/assets/css/style.css
+++ b/invitation/assets/css/style.css
@@ -9,6 +9,17 @@
     background-size: 100%;	
 }
 
+.card1 {
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    background-image: url(/invitation/assets/images/jashwanth_background.jpg);
+    height: 1600px;
+    background-size: 100%;	
+}
+
 .title {
   color: grey;
   font-size: 18px;
