harshitha sep 13 lion king birthday

--- a/invitation/assets/css/style.css
+++ b/invitation/assets/css/style.css
@@ -54,6 +54,18 @@
     background-size: 100%;	
 }
 
+.harshitha_card {
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    background-image: url(/invitation/assets/images/harshitha_background.jpg);
+    height: 1600px;
+    background-size: 100%;	
+}
+
+
 .title {
   color: grey;
   font-size: 18px;
