--- a/invitation/assets/css/style.css
+++ b/invitation/assets/css/style.css
@@ -65,7 +65,7 @@
     background-size: 100%;	
 }
 
-.harshitha_card {
+.theeran_card {
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
