laveena oct 14 2020 hello kitty

--- a/invitation/assets/css/style.css
+++ b/invitation/assets/css/style.css
@@ -41,6 +41,18 @@
     background-size: 100%;	
 }
 
+.laveena_card {
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    background-image: url(/invitation/assets/images/laveena_background.jpg);
+    height: 1600px;
+    background-size: 100%;	
+}
+
+
 .nevan_card {
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
