--- a/invitation/assets/css/style.css
+++ b/invitation/assets/css/style.css
@@ -108,6 +108,19 @@
     background-size: 100%;	
 }
 
+.vignesh_nisha_inivitation_card {
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    background-image: url(/invitation/assets/images/vignesh_nisha_inivitation.jpg);
+    height: 1600px;
+    background-size: 100%;	
+}
+
+
+
 .theeran_card {
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
